# bulpedia-scraper

./: .gitignore  README.md  pyproject.toml
bulpedia_scraper/: __main__.py  pokemon.py  scrape_utils.py  settings.py  task_queue.py
